edited queries and fixed overflow

--- a/stylesheets/profile.css
+++ b/stylesheets/profile.css
@@ -70,6 +70,7 @@ nav img {
 section {
     padding: 200px 20px 0;
     text-align: center;
+    overflow: hidden;
 }
 
 section p {
