--- a/stylesheets/queries.css
+++ b/stylesheets/queries.css
@@ -1,26 +1,26 @@
 @media (max-width: 740px) {
-nav a {
+    nav a {
     margin-left: 0;
     font-size: 15px;
+    }
+
+    #my-skills {
+    font-size: 15px;
+    padding: 0px;
+    margin: 20px 0;
+    }
+
+    .social-links {
+    padding: 100px 20px;
+    }
+
+    #skills {
+    height: fit-content;
     }
 }
 
 @media (max-width: 440px) {
 section {
     padding: 20px;
-    }
-}
-
-@media (max-width: 740px) {
-#my-skills {
-    font-size: 15px;
-    padding: 0px;
-    margin: 20px 0;
-    }
-}
-
-@media (max-width: 740px) {
-.social-links {
-    padding: 100px 20px;
     }
 }
